# src/app.ts
@@ -5,6 +5,7 @@ import cookieParser from "cookie-parser";
 
 import { auth, requiresAuth } from "express-openid-connect";
 import { ensureDBConnection } from "./middleware/db";
+import { MongoError } from "mongodb";
 
 const app = express();
 
@@ -38,8 +39,41 @@ app
 
 // req.isAuthenticated is provided from the auth router
 app.get("/", async (req, res) => {
-  console.log(req.oidc.idTokenClaims);
-  res.send(req.oidc.isAuthenticated() ? "Logged in" : "Logged out");
+  if (req.oidc.isAuthenticated()) {
+    const { _raw, _json, ...userProfile } = req.oidc.user;
+    console.log("userprofile", userProfile);
+    console.log("fhjkhf", req.app.locals.db);
+    console.log(_json);
+    console.log("token", req.oidc.idTokenClaims);
+    // req.app.locals.db.collection("users").insertOne(userProfile);
+    req.app.locals.db
+      .collection("users")
+      .updateOne(
+        { sub: userProfile.sub },
+        { $set: userProfile },
+        { upsert: true },
+        (err: MongoError, result: unknown) => {
+          if (err) {
+            // Log errors during the database operation
+            console.error("Error adding user to MongoDB:", err);
+            res.status(500).send("Failed to add user");
+          } else {
+            // Log successful addition
+            console.log(result);
+            console.log("User added to MongoDB successfully");
+            res.redirect("/api-docs");
+          }
+        }
+      );
+    // res.send(JSON.stringify(userProfile, null, 2));
+    // res.send("Logged in");
+    // res.redirect("/api-docs");
+    res.redirect("/api-docs");
+  } else {
+    res.redirect("/login");
+  }
+
+  // res.send(req.oidc.isAuthenticated() ? "Logged in" : "Logged out");
 });
 
 export default app;
