# src/controllers/orders.ts
@@ -5,12 +5,22 @@ import { getDb } from "../models";
 export const addOrder = async (
   req: Request,
   res: Response,
-  next: NextFunction,
+  next: NextFunction
 ) => {
-  const { order } = req.body;
+  // const { order } = req.body;
+  console.log(req.body);
   try {
     const db = getDb();
-    const result = await db.collection("orders").insertOne(order);
+    const result = await db.collection("orders").insertOne({
+      user: req.body.user,
+      product: req.body.product,
+      // category: req.body.category,
+      // price: req.body.price,
+      quantity: req.body.quantity,
+      // total: req.body.total,
+      // status: req.body.status,
+      date: req.body.date,
+    });
     res.json(result);
   } catch (err) {
     next(err);
@@ -20,7 +30,7 @@ export const addOrder = async (
 export const getOrders = async (
   req: Request,
   res: Response,
-  next: NextFunction,
+  next: NextFunction
 ) => {
   try {
     const db = getDb();
@@ -34,7 +44,7 @@ export const getOrders = async (
 export const getOrderById = async (
   req: Request,
   res: Response,
-  next: NextFunction,
+  next: NextFunction
 ) => {
   const { id } = req.params;
   try {
@@ -50,43 +60,64 @@ export const getOrderById = async (
 
 export const updateOrder = async (
   req: Request,
-  res: Response,
-  next: NextFunction,
+  res: Response
+  // next: NextFunction
 ) => {
   const { id } = req.params;
-  const { order } = req.body;
+  // const { order } = req.body;
   try {
     const db = getDb();
-    const result = await db
-      .collection("orders")
-      .updateOne({ _id: new ObjectId(id) }, { $set: order });
-    res.json(result);
+    const result = await db.collection("orders").updateOne(
+      { _id: new ObjectId(id) },
+      {
+        $set: {
+          user: req.body.user,
+          product: req.body.product,
+          // category: req.body.category,
+          // price: req.body.price,
+          quantity: req.body.quantity,
+          // total: req.body.total,
+          // status: req.body.status,
+          date: req.body.date,
+        },
+      }
+    );
+    // res.json(result);
+    console.log(result);
+    if (result.matchedCount > 0) {
+      // res.status(202).json({ message: "Updated" }); // 204 No Content
+      res.status(204).end(); // 204 No Content
+    } else {
+      res.status(404).json({ message: "Order not found" }); // 404 Not Found
+    }
   } catch (err) {
-    next(err);
+    // next(err);
+    res.status(500).json({ message: "Internal Server Error" }); // 500 Internal Server Error
   }
 };
 
-export const deleteOrder = async (
-  req: Request,
-  res: Response,
-  next: NextFunction,
-) => {
+export const deleteOrder = async (req: Request, res: Response) => {
   const { id } = req.params;
   try {
     const db = getDb();
     const result = await db
       .collection("orders")
       .deleteOne({ _id: new ObjectId(id) });
-    res.json(result);
+    if (result.deletedCount > 0) {
+      res.status(204).end(); // 204 No Content
+    } else {
+      res.status(404).json({ message: "Order not found" }); // 404 Not Found
+    }
   } catch (err) {
-    next(err);
+    console.log(err);
+    res.status(500).json({ message: "Internal Server Error" }); // 500 Internal Server Error
   }
 };
 
 export const getOrdersByUser = async (
   req: Request,
   res: Response,
-  next: NextFunction,
+  next: NextFunction
 ) => {
   const { user } = req.params;
   try {
@@ -101,7 +132,7 @@ export const getOrdersByUser = async (
 export const getOrdersByStatus = async (
   req: Request,
   res: Response,
-  next: NextFunction,
+  next: NextFunction
 ) => {
   const { status } = req.params;
   try {
@@ -119,7 +150,7 @@ export const getOrdersByStatus = async (
 export const getOrdersByDate = async (
   req: Request,
   res: Response,
-  next: NextFunction,
+  next: NextFunction
 ) => {
   const { date } = req.params;
   try {
@@ -134,7 +165,7 @@ export const getOrdersByDate = async (
 export const getOrdersByProduct = async (
   req: Request,
   res: Response,
-  next: NextFunction,
+  next: NextFunction
 ) => {
   const { product } = req.params;
   try {
@@ -152,7 +183,7 @@ export const getOrdersByProduct = async (
 export const getOrdersByCategory = async (
   req: Request,
   res: Response,
-  next: NextFunction,
+  next: NextFunction
 ) => {
   const { category } = req.params;
   try {
@@ -170,7 +201,7 @@ export const getOrdersByCategory = async (
 export const getOrdersByPrice = async (
   req: Request,
   res: Response,
-  next: NextFunction,
+  next: NextFunction
 ) => {
   const { price } = req.params;
   try {
@@ -188,7 +219,7 @@ export const getOrdersByPrice = async (
 export const getOrdersByQuantity = async (
   req: Request,
   res: Response,
-  next: NextFunction,
+  next: NextFunction
 ) => {
   const { quantity } = req.params;
   try {
@@ -206,7 +237,7 @@ export const getOrdersByQuantity = async (
 export const getOrdersByTotal = async (
   req: Request,
   res: Response,
-  next: NextFunction,
+  next: NextFunction
 ) => {
   const { total } = req.params;
   try {
